--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <div id="app">
+      <header id="header">
+        <div id="navigation"></div>
+        <div id="theme"></div>
+      </header>
+      <main id="main"></main>
+      <footer id="footer"></footer>
+    </div>
+    <script type="module" src="/src/scripts/questionnaire.js"></script>
+    <script type="module" src="/src/scripts/style.js"></script>
   </body>
 </html>
