--- a/contact/index.html
+++ b/contact/index.html
@@ -1,20 +1,50 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
-  </head>
-  <body>
-    <div id="app">
-      <header id="header">
-        <div id="navigation"></div>
-        <div id="theme"></div>
-      </header>
-      <main id="main"></main>
-      <footer id="footer"></footer>
-    </div>
-      <script type="module" src="/src/scripts/style.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <link rel="stylesheet" href="/src/styles/contact.css">
+  <title>Contact</title>
+</head>
+
+<body>
+  <div id="app">
+    <header id="header">
+      <div id="navigation"></div>
+      <div id="theme"></div>
+    </header>
+    <main id="main">
+      <section id="contact-progress" class="py-4">
+        <center>
+          <ul class="steps">
+            <li class="step  step-primary" id="contact-name">Name</li>
+            <li class="step" id="contact-email">Email</li>
+            <li class="step" id="contact-message">Message</li>
+            <li class="step" id="contact-submit">Submit</li>
+          </ul>
+        </center>
+      </section>
+
+      <section id="contact-content" class="p-6 mx-auto my-4 max-w-2xl">
+        <!-- Le contenu sera généré par JavaScript -->
+      </section>
+
+      <section id="contact-send" class="p-6 mt-2 mb-6 w-full max-w-2xl mx-auto">
+        <div class="flex gap-2 w-full max-w-6xl mx-auto">
+          <input type="text" placeholder="Type here" class="input w-full flex-grow" />
+          <button class="btn btn-primary">Envoyer</button>
+        </div>
+      </section>
+
+    </main>
+    <footer id="footer"></footer>
+  </div>
+  <script type="module" src="/src/scripts/style.js"></script>
+  <script type="module" src="/src/scripts/contact/contact.js"></script>
+</body>
+
 </html>
