update script to defer

--- a/calculatrice/index.html
+++ b/calculatrice/index.html
@@ -168,7 +168,7 @@
         <footer id="footer"></footer>
     </div>
     <script type="module" src="/src/scripts/style.js"></script>
-    <script type="module" src="/src/scripts/calculatrice.js"></script>
+    <script type="module" src="/src/scripts/calculatrice.js" defer></script>
 </body>
 
 </html>
