--- a/contact/index.html
+++ b/contact/index.html
@@ -44,7 +44,7 @@
     <footer id="footer"></footer>
   </div>
   <script type="module" src="/src/scripts/style.js"></script>
-  <script type="module" src="/src/scripts/contact/contact.js"></script>
+  <script type="module" src="/src/scripts/contact/contact.js" defer></script>
 </body>
 
 </html>
